objects/API_Request__c.object
<CustomObject>
    <label>API Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>API Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>hash__c</fullName>
        <label>hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plan__c</fullName>
        <label>plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>createNewProject</fullName>
                </value>
                <value>
                    <fullName>createTrialLead</fullName>
                </value>
                <value>
                    <fullName>updateBillingInformation</fullName>
                </value>
                <value>
                    <fullName>newUserEvent</fullName>
                </value>
                <value>
                    <fullName>removeUserEvent</fullName>
                </value>
                <value>
                    <fullName>changeRoleEvent</fullName>
                </value>
                <value>
                    <fullName>freezeUserEvent</fullName>
                </value>
                <value>
                    <fullName>unfreezeUserEvent</fullName>
                </value>
                <value>
                    <fullName>updateUserInfo</fullName>
                </value>
                <value>
                    <fullName>updateUserPbOptIn</fullName>
                </value>
                <value>
                    <fullName>updateTrialEndDate</fullName>
                </value>
                <value>
                    <fullName>deleteSpace</fullName>
                </value>
                <value>
                    <fullName>addSubscription</fullName>
                </value>
                <value>
                    <fullName>cancelSubscription</fullName>
                </value>
                <value>
                    <fullName>changePlan</fullName>
                </value>
                <value>
                    <fullName>updateUserFullName</fullName>
                </value>
                <value>
                    <fullName>updateUserEmail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>biCity__c</fullName>
        <label>biCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccCity__c</fullName>
        <label>ccCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>biState__c</fullName>
        <label>biState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccState__c</fullName>
        <label>ccState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company__c</fullName>
        <label>company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pbOptIn__c</fullName>
        <label>pbOptIn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>teamUrl__c</fullName>
        <label>teamUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userId1__c</fullName>
        <label>userId1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userId2__c</fullName>
        <label>userId2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userId3__c</fullName>
        <label>userId3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRole__c</fullName>
        <label>UserRole</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fullName__c</fullName>
        <label>fullName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>biAddress__c</fullName>
        <label>biAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>biCountry__c</fullName>
        <label>biCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccAddress__c</fullName>
        <label>ccAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccCountry__c</fullName>
        <label>ccCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventType__c</fullName>
        <label>eventType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>frequency__c</fullName>
        <label>frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>projectId__c</fullName>
        <label>projectId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spaceType__c</fullName>
        <label>spaceType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEmail1__c</fullName>
        <label>userEmail1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEmail2__c</fullName>
        <label>userEmail2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEmail3__c</fullName>
        <label>userEmail3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>biVATNumber__c</fullName>
        <label>biVATNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>planVersion__c</fullName>
        <label>planVersion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>biPostalCode__c</fullName>
        <label>biPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccPostalCode__c</fullName>
        <label>ccPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>discountType__c</fullName>
        <label>discountType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trialEndDate__c</fullName>
        <label>trialEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amountOfUsers__c</fullName>
        <label>amountOfUsers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>biCompanyName__c</fullName>
        <label>biCompanyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>discountValue__c</fullName>
        <label>discountValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activationDate__c</fullName>
        <label>activationDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccBillingEmail__c</fullName>
        <label>ccBillingEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>discountLength__c</fullName>
        <label>discountLength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingInfoFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>billingInfoFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>discountSubtype__c</fullName>
        <label>discountSubtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stripeInvoiceId__c</fullName>
        <label>stripeInvoiceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Request__c</fullName>
        <label>Original Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <label>Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>biAdditionalInfo__c</fullName>
        <label>biAdditionalInfo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Solved_Message__c</fullName>
        <label>Error Solved Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userEmailsToActivate__c</fullName>
        <label>userEmailsToActivate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Failed_this_week</fullName>
        <columns>NAME</columns>
        <columns>Success__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Method__c</columns>
        <columns>Response_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Success__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Failed this week</label>
    </listViews>
    <listViews>
        <fullName>Todays_API_Requests</fullName>
        <columns>NAME</columns>
        <columns>Success__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Method__c</columns>
        <columns>Response_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays API Requests_All</label>
    </listViews>
    <recordTypes>
        <fullName>LeadInfo</fullName>
        <active>true</active>
        <label>LeadInfo</label>
    </recordTypes>
    <recordTypes>
        <fullName>EventInfo</fullName>
        <active>true</active>
        <label>EventInfo</label>
    </recordTypes>
    <recordTypes>
        <fullName>BillingInfo</fullName>
        <active>true</active>
        <label>BillingInfo</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProjectInfo</fullName>
        <active>true</active>
        <label>ProjectInfo</label>
    </recordTypes>
    <recordTypes>
        <fullName>UserOps_DTO_req</fullName>
        <active>true</active>
        <label>UserOps_DTO_req</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subscription_DTO_Req</fullName>
        <active>true</active>
        <label>Subscription_DTO_Req</label>
    </recordTypes>
</CustomObject>